WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142979
[WK2] NetworkCache retrievals fail for entries with no body
https://bugs.webkit.org/show_bug.cgi?id=142979
Summary
[WK2] NetworkCache retrievals fail for entries with no body
Chris Dumez
Reported
2015-03-23 13:43:13 PDT
NetworkCache retrievals fail for entries with no body because decodeEntry() doesn't correctly handle this case. In particular, the following check fails: "metaData.bodyOffset + metaData.bodySize == fileData.size()". This is because bodyOffset is pageSize-aligned. As a result, the following resource on apple.com is stored in the cache but we fail to reuse it and reload it from the network every time:
http://images.apple.com/home/styles/promos.css
Attachments
Patch
(45.62 KB, patch)
2015-03-23 13:52 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-mavericks
(623.11 KB, application/zip)
2015-03-23 14:11 PDT
,
Build Bot
no flags
Details
Patch
(50.51 KB, patch)
2015-03-23 14:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(44.28 KB, patch)
2015-03-24 09:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-03-23 13:43:31 PDT
<
rdar://problem/20264100
>
Chris Dumez
Comment 2
2015-03-23 13:52:06 PDT
Created
attachment 249263
[details]
Patch
Build Bot
Comment 3
2015-03-23 14:11:44 PDT
Comment on
attachment 249263
[details]
Patch
Attachment 249263
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6306153034153984
New failing tests: http/tests/cache/disk-cache-validation-no-body.html
Build Bot
Comment 4
2015-03-23 14:11:50 PDT
Created
attachment 249269
[details]
Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Chris Dumez
Comment 5
2015-03-23 14:19:39 PDT
Created
attachment 249272
[details]
Patch
Chris Dumez
Comment 6
2015-03-24 09:50:29 PDT
Created
attachment 249332
[details]
Patch
Chris Dumez
Comment 7
2015-03-24 09:51:34 PDT
Comment on
attachment 249332
[details]
Patch Clearing flags on attachment: 249332 Committed
r181895
: <
http://trac.webkit.org/changeset/181895
>
Chris Dumez
Comment 8
2015-03-24 09:51:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug